--- a/index.html
+++ b/index.html
@@ -3,38 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
+    <title>Animación de Color</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Web</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Acerca de</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-        </nav>
+        <h1>Cuadro Cambiando de Color</h1>
     </header>
 
-    <section id="home">
-        <h2>Inicio</h2>
-        <p>Este es el inicio de la página web. Aquí puedes encontrar información sobre varios temas.</p>
-    </section>
-
-    <section id="about">
-        <h2>Acerca de</h2>
-        <p>Esta página está diseñada para demostrar cómo vincular un archivo HTML con un archivo CSS.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contacto</h2>
-        <p>Puedes contactarnos a través del siguiente correo: contacto@miweb.com</p>
+    <section>
+        <div class="color-box"></div> <!-- Cuadro que cambiará de color -->
     </section>
 
     <footer>
-        <p>&copy; 2024 Mi Página Web. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Animación de Color. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
