--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animación de Color</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Botón Interactivo</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body>
     <header>
-        <h1>Cuadro Cambiando de Color</h1>
+        <h1>Botón Interactivo</h1>
+        <p>Haz clic en el botón para ver el efecto.</p>
     </header>
 
     <section>
-        <div class="color-box"></div> <!-- Cuadro que cambiará de color -->
+        <button class="interactive-button">Haz clic aquí</button>
     </section>
 
     <footer>
-        <p>&copy; 2024 Animación de Color. Todos los derechos reservados.</p>
+        <p>&copy; 2024. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
