--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animaciones y Transiciones CSS</title>
+    <title>BTS - Canciones y Animaciones</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <div class="contenedor">
-        <!-- Botón con cambio de color y tamaño -->
-        <button class="btn">Haz clic en mí</button>
+        <h1 class="titulo">Canciones de BTS</h1>
 
-        <!-- Cuadro con animación de color y movimiento -->
-        <div class="cuadro"></div>
+        <!-- Primera canción: Dynamite -->
+        <div class="cancion">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/BTS_-_Dynamite_cover.png" alt="Dynamite" class="album">
+            <h2 class="nombre-cancion">Dynamite</h2>
+            <button class="btn">Escuchar</button>
+        </div>
 
-        <!-- Texto con animación -->
-        <p class="texto-animado">Este es un texto que se anima.</p>
+        <!-- Segunda canción: Butter -->
+        <div class="cancion">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/BTS_-_Butter_%28single_cover%29.jpg" alt="Butter" class="album">
+            <h2 class="nombre-cancion">Butter</h2>
+            <button class="btn">Escuchar</button>
+        </div>
+
+        <!-- Tercera canción: Boy With Luv -->
+        <div class="cancion">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/BTS_-_Boy_With_Luv.png" alt="Boy With Luv" class="album">
+            <h2 class="nombre-cancion">Boy With Luv</h2>
+            <button class="btn">Escuchar</button>
+        </div>
     </div>
-
 </body>
 </html>
