--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
         <!-- Primera canción: Dynamite -->
         <div class="cancion">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/BTS_-_Dynamite_cover.png" alt="Dynamite" class="album">
+            <img src="https://youtu.be/SUNnMsq8OKU?si=0dGysmMrxGKjlVpm" alt="Dynamite" class="album">
             <h2 class="nombre-cancion">Dynamite</h2>
             <button class="btn">Escuchar</button>
         </div>
 
         <!-- Segunda canción: Butter -->
         <div class="cancion">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/BTS_-_Butter_%28single_cover%29.jpg" alt="Butter" class="album">
+            <img src="https://youtu.be/gdZLi9oWNZg?si=wasFDzSnsABg6n_d" alt="Butter" class="album">
             <h2 class="nombre-cancion">Butter</h2>
             <button class="btn">Escuchar</button>
         </div>
 
         <!-- Tercera canción: Boy With Luv -->
         <div class="cancion">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/BTS_-_Boy_With_Luv.png" alt="Boy With Luv" class="album">
+            <img src="https://youtu.be/XsX3ATc3FbA?si=ewsDspajKBZfHKxn" alt="Boy With Luv" class="album">
             <h2 class="nombre-cancion">Boy With Luv</h2>
             <button class="btn">Escuchar</button>
         </div>
