--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTS - Canciones y Animaciones</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Animaciones CSS</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="contenedor">
-        <h1 class="titulo">Canciones de BTS</h1>
 
-        <!-- Primera canción: Dynamite -->
-        <div class="cancion">
-            <img src="https://youtu.be/SUNnMsq8OKU?si=0dGysmMrxGKjlVpm" alt="Dynamite" class="album">
-            <h2 class="nombre-cancion">Dynamite</h2>
-            <button class="btn">Escuchar</button>
-        </div>
+  <div class="container">
+    <!-- Botón con cambio de tamaño y color al hacer clic -->
+    <button class="boton">Haz clic aquí</button>
 
-        <!-- Segunda canción: Butter -->
-        <div class="cancion">
-            <img src="https://youtu.be/gdZLi9oWNZg?si=wasFDzSnsABg6n_d" alt="Butter" class="album">
-            <h2 class="nombre-cancion">Butter</h2>
-            <button class="btn">Escuchar</button>
-        </div>
+    <!-- Cuadro con animación de cambio de color -->
+    <div class="cuadro"></div>
 
-        <!-- Tercera canción: Boy With Luv -->
-        <div class="cancion">
-            <img src="https://youtu.be/XsX3ATc3FbA?si=ewsDspajKBZfHKxn" alt="Boy With Luv" class="album">
-            <h2 class="nombre-cancion">Boy With Luv</h2>
-            <button class="btn">Escuchar</button>
-        </div>
+    <!-- Texto con animación de giro y movimiento hacia arriba -->
+    <div class="texto-animado">¡Texto Animado!</div>
+
+    <!-- Galería de imágenes de los 7 integrantes de BTS -->
+    <div class="bts-galeria">
+      <img src="rm.jpeg" alt="RM">
+      <img src="jin.jpeg" alt="Jin">
+      <img src="suga.jpeg" alt="Suga">
+      <img src="jhope.jpeg" alt="J-Hope">
+      <img src="jimin.jpeg" alt="Jimin">
+      <img src="v.jpg" alt="V">
+      <img src="jonguk.jpg" alt="Jungkook">
     </div>
+  </div>
+
 </body>
 </html>
