--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="cuadro"></div>
 
     <!-- Texto con animación de giro y movimiento hacia arriba -->
-    <div class="texto-animado">¡Texto Animado!</div>
+    <div class="texto-animado">¡BTS!</div>
 
     <!-- Galería de imágenes de los 7 integrantes de BTS -->
     <div class="bts-galeria">
@@ -26,9 +26,10 @@
       <img src="jhope.jpeg" alt="J-Hope">
       <img src="jimin.jpeg" alt="Jimin">
       <img src="v.jpg" alt="V">
-      <img src="jonguk.jpg" alt="Jungkook">
+      <img src="jongk.jpg" alt="Jungkook">
     </div>
   </div>
 
 </body>
 </html>
+
