--- a/index.html
+++ b/index.html
@@ -16,20 +16,8 @@
     <div class="cuadro"></div>
 
     <!-- Texto con animación de giro y movimiento hacia arriba -->
-    <div class="texto-animado">¡BTS!</div>
-
-    <!-- Galería de imágenes de los 7 integrantes de BTS -->
-    <div class="bts-galeria">
-      <img src="rm.jpeg" alt="RM">
-      <img src="jin.jpeg" alt="Jin">
-      <img src="suga.jpeg" alt="Suga">
-      <img src="jhope.jpeg" alt="J-Hope">
-      <img src="jimin.jpeg" alt="Jimin">
-      <img src="v.jpg" alt="V">
-      <img src="jongk.jpg" alt="Jungkook">
-    </div>
+    <div class="texto-animado">¡Texto Animado!</div>
   </div>
 
 </body>
 </html>
-
